--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -43,7 +47,7 @@ nav {
 }
 
 main {
-  background: url("bg.jpg") no-repeat center center;
+  background: url("assets/images/bg.jpg") no-repeat center center;
   background-size: cover;
   height: 92vh;
 }
@@ -123,3 +127,46 @@ main {
 .mobile-menu.active .line3 {
   transform: rotate(45deg) translate(-5px, -7px);
 }
+
+.scroll-up {
+  position: fixed;
+  right: 1%;
+  bottom: 3%;
+  cursor: pointer;
+}
+
+.up-arrow {
+  width: 3rem;
+  height: 3rem;
+  transition: 350ms linear;
+}
+
+.up-arrow:hover {
+  transform: scale(1.2);
+}
+
+footer {
+  border-top: 1px solid #f1f1f1;
+  box-shadow: 0px -2px 3px #f1f1f1;
+  text-align: center;
+  padding: 2rem;
+}
+
+/* .up-arrow-animation {
+  animation: GoUpIcon 2000ms infinite normal;
+}
+
+@keyframes GoUpIcon {
+  0% {
+    transform: scale(0.8);
+  }
+  25% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1.5);
+  }
+} */
