--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Muli&display=swap");
+
 html {
   scroll-behavior: smooth;
 }
@@ -46,10 +48,75 @@ nav {
   height: 8vh;
 }
 
-main {
-  background: url("assets/images/bg.jpg") no-repeat center center;
+/* main.dark {
+  background: url("assets/images/lubo-minar-B-gb_8fgmz8-unsplash.jpg") no-repeat
+    center center;
   background-size: cover;
   height: 92vh;
+}
+
+main.ligh {
+  background: url("assets/images/brightness-and-contrast.png") no-repeat center
+    center;
+  background-size: cover;
+  height: 92vh;
+} */
+
+body {
+  background: url("assets/images/alexander-grey-NkQD-RHhbvY-unsplash.jpg")
+    no-repeat center center;
+  background-size: cover;
+  height: 92vh;
+}
+
+body.dark {
+  background: url("assets/images/lubo-minar-B-gb_8fgmz8-unsplash.jpg") no-repeat
+    center center;
+  background-size: cover;
+  height: 92vh;
+}
+
+.checkbox {
+  opacity: 0;
+  position: absolute;
+}
+
+.label {
+  background-color: #111;
+  border-radius: 50px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+  position: relative;
+  height: 15px;
+  width: 50px;
+  transform: scale(1.5);
+}
+
+.label .ball {
+  background-color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  top: 2px;
+  left: 7px;
+  height: 22px;
+  width: 22px;
+  transform: translateX(0px);
+  transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label .ball {
+  transform: translateX(24px);
+}
+
+.fa-moon {
+  color: #f1c40f;
+}
+
+.fa-sun {
+  color: #f39c12;
 }
 
 .nav-list {
@@ -150,23 +217,5 @@ footer {
   box-shadow: 0px -2px 3px #f1f1f1;
   text-align: center;
   padding: 2rem;
+  bottom: 0;
 }
-
-/* .up-arrow-animation {
-  animation: GoUpIcon 2000ms infinite normal;
-}
-
-@keyframes GoUpIcon {
-  0% {
-    transform: scale(0.8);
-  }
-  25% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.3);
-  }
-  100% {
-    transform: scale(1.5);
-  }
-} */
